--- a/dwh/Vagrantfile
+++ b/dwh/Vagrantfile
@@ -9,6 +9,13 @@ Vagrant.configure(2) do |config|
   config.vm.box = "deb/wheezy-amd64"
   config.vm.provision :shell, path: "bootstrap.sh"
   
+  # Troubleshooting if startup fails:
+  #config.vm.provider :virtualbox do |vb|
+  #  vb.gui = true
+  #end
+#  config.vm.boot_timeout = 600
+  
+  
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
