--- a/dwh/Vagrantfile
+++ b/dwh/Vagrantfile
@@ -6,24 +6,21 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 Vagrant.configure(2) do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
-
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "running.i2b2.box"
-
+  config.vm.box = "deb/jessie-amd64"
+  config.vm.provision :shell, path: "bootstrap.sh"
+  
+  # Troubleshooting if startup fails:
+  #config.vm.provider :virtualbox do |vb|
+  #  vb.gui = true
+  #end
+#  config.vm.boot_timeout = 600
+  
+  
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
   # config.vm.box_check_update = false
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
-  
 # webserver
   config.vm.network "forwarded_port", guest: 80, host: 80
 
