--- a/dwh/i2b2_install/install.conf
+++ b/dwh/i2b2_install/install.conf
@@ -15,6 +15,7 @@ JBOSS_HOME=$BASE_APPDIR/jboss-as-7.1.1.Final
 JBOSS_LOG=$JBOSS_HOME/standalone/log/boot.log
 JBOSS_LOG_2=$JBOSS_HOME/standalone/log/server.log
 JBOSS_DEPLOY_DIR=$JBOSS_HOME/standalone/deployments
+JBOSS_CONFIG_DIR=$JBOSS_HOME/standalone/configuration
 
 WEBSERVERDIRECTORY=/var/www/html
 
