--- a/dwh/i2b2_install/db_user/db.properties
+++ b/dwh/i2b2_install/db_user/db.properties
@@ -4,5 +4,5 @@ db.username=postgres
 db.password=i2b2
 db.server=localhost:5432/i2b2
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/
+db.url=jdbc:postgresql://localhost:5432/i2b2
 
