updated build properties

--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -23,9 +23,11 @@ dbuser.dir=db_user/
 
 # Created by AKTIN@2015
 db.type=postgresql
-db.server=localhost:5432/i2b2
+db.server=localhost:5432/
 db.name=i2b2
+db.project=demo
 db.driver=org.postgresql.Driver
+db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.url=jdbc:postgresql://localhost:5432/
 db.username=postgres
 db.password=i2b2
@@ -39,4 +41,24 @@ db.meta.user=i2b2metadata
 db.meta.pwd=i2b2metadata
 db.crc.user=i2b2demodata
 db.crc.pwd=i2b2demodata
+
+db.DBURL=@DBURL@
+db.DBTYPE=@DBTYPE@
+db.DBPROJECT=@I2B2PROJECT@
+db.DBNAME=@DBNAME@
+db.SERVERURL=@SERVERURL@
+db.DBDRIVER=@DBDRIVER@
+db.DBDRIVERJAR=@DBDRIVERJAR@
+db.DBUSER=@DBUSER@
+db.DBPWD=@DBPWD@
+db.HIVEUSER=@I2B2HIVEUSER@
+db.HIVEPWD=@I2B2HIVEPWD@
+db.PMUSER=@I2B2PMUSER@
+db.PMPWD=@I2B2PMPWD@
+db.WORKUSER=@I2B2WORKUSER@
+db.WORKPWD=@I2B2WORKPWD@
+db.METAUSER=@I2B2METAUSER@
+db.METAPWD=@I2B2METAPWD@
+db.DEMOUSER=@I2B2DEMOUSER@
+db.DEMOPWD=@I2B2DEMOPWD@
 
