--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -6,7 +6,6 @@ axis2.war.name=i2b2.war
 bin.includes = lib/jdom/jdom.jar
 bin.includes = lib/jdom/jdom-contrib.jar
 
-
 ## I2B2 properties
 packages.folder=/vagrant/packages/
 ant.installdata.folder=/vagrant/i2b2_install/
@@ -18,8 +17,6 @@ work.dir=db_work/
 meta.dir=db_meta/
 crc.dir=db_crc/
 dbuser.dir=db_user/
-
-
 
 # Created by AKTIN@2015
 db.type=postgresql
@@ -61,4 +58,6 @@ db.METAUSER=@I2B2METAUSER@
 db.METAPWD=@I2B2METAPWD@
 db.DEMOUSER=@I2B2DEMOUSER@
 db.DEMOPWD=@I2B2DEMOPWD@
+
+jboss.ds-xml.dir=jboss_xml_ds/
 
