--- a/dwh/i2b2_install/install.conf
+++ b/dwh/i2b2_install/install.conf
@@ -1,4 +1,4 @@
-MY_PATH=/vagrant/
+# MY_PATH=/vagrant/
 
 DATA_HOME=$MY_PATH/i2b2_install
 LOG_DIR=$MY_PATH/logs
@@ -17,7 +17,7 @@ JBOSS_LOG_2=$JBOSS_HOME/standalone/log/server.log
 JBOSS_DEPLOY_DIR=$JBOSS_HOME/standalone/deployments
 JBOSS_CONFIG_DIR=$JBOSS_HOME/standalone/configuration
 
-WEBSERVERDIRECTORY=/var/www/html
+WEBSERVERDIRECTORY=/var/www/
 
 
 HIVE_SCHEMA=i2b2hive
