updated build properties

--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -2,15 +2,21 @@
 # Ant build property file
 
 ## JBOSS HOME
+app.base.dir=/opt
 jboss.home=/opt/jboss-as-7.1.1.Final
+axis2.zip.name=axis2-1.6.2-war.zip
 axis2.war.name=i2b2.war
 bin.includes = lib/jdom/jdom.jar
 bin.includes = lib/jdom/jdom-contrib.jar
+jboss.dir.exist=false
+ip.addr=127.0.0.1
 
 ## I2B2 properties
-packages.folder=/vagrant/packages/
-ant.installdata.folder=/vagrant/i2b2_install/
-ant.i2b2.data.folder=/vagrant/i2b2_install/i2b2_src/edu.harvard.i2b2.data/Release_1-7/NewInstall/
+packages.dir=/vagrant/packages/
+ant.installdata.dir=/vagrant/i2b2_install/
+ant.i2b2.data.dir=/vagrant/i2b2_install/i2b2_src/edu.harvard.i2b2.data/Release_1-7/NewInstall/
+i2b2.src.dir=/vagrant/i2b2_install/i2b2_src
+web.html.dir=/var/webroot
 log.dir=/vagrant/logs
 hive.dir=db_hive/
 pm.dir=db_pm/
@@ -29,6 +35,7 @@ db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.url=jdbc:postgresql://localhost:5432/
 db.username=postgres
 db.password=i2b2
+db.hive.id=i2b2demo
 db.hive.user=i2b2hive
 db.hive.pwd=i2b2hive
 db.pm.user=i2b2pm
