angepasste config files

--- a/dwh/i2b2_install/db_pm/db.properties
+++ b/dwh/i2b2_install/db_pm/db.properties
@@ -1,8 +1,8 @@
-# Created by i2b2 Wizard
+# Created by AKTIN@2015
+
 db.type=postgresql
 db.username=i2b2pm
 db.password=i2b2pm
 db.server=localhost:5432/i2b2?searchpath=i2b2pm
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/i2b2?searchpath=i2b2pm
-
