--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -13,6 +13,9 @@ ip.addr=127.0.0.1
 
 ## I2B2 properties
 packages.dir=/vagrant/packages/
+packages.dir.exist=false
+packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/84p6lgOCbkI5nbw/download
+base.dir=/vagrant/
 ant.installdata.dir=/vagrant/i2b2_install/
 ant.i2b2.data.dir=/vagrant/i2b2_install/i2b2_src/edu.harvard.i2b2.data/Release_1-7/NewInstall/
 i2b2.src.dir=/vagrant/i2b2_install/i2b2_src
