--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -10,10 +10,11 @@ bin.includes = lib/jdom/jdom.jar
 bin.includes = lib/jdom/jdom-contrib.jar
 jboss.dir.exist=false
 ip.addr=127.0.0.1
+i2b2.version=1706
 
 ## I2B2 properties
 packages.dir=/vagrant/packages/
-packages.dir.exist=false
+packages.dir.noload=false
 packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/84p6lgOCbkI5nbw/download
 base.dir=/vagrant/
 ant.installdata.dir=/vagrant/i2b2_install/
