--- a/dwh/i2b2_install/build.xml
+++ b/dwh/i2b2_install/build.xml
@@ -16,11 +16,12 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
 			<pathelement location="postgresql-9.2-1002.jdbc4.jar"/>
 		</path>
 	</target>  
-    <target name="get_packages" unless="${packages.dir.exist}">
+    <target name="get_packages" unless="${packages.dir.noload}">
         <get src="https://cloudstorage.uni-oldenburg.de/index.php/s/84p6lgOCbkI5nbw/download" dest="${base.dir}/p.zip"/>
         <unzip src="${base.dir}/p.zip" dest="${base.dir}" overwrite="false"/>
         <delete file="${base.dir}/p.zip"/>
     </target>
+
 
     <!-- =================================================================== -->
     <!--     Change properties                                               -->
@@ -76,12 +77,12 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
     <target name="unzip_i2b2" >
         <delete dir="${i2b2.src.dir}" quiet="true"/>
         <mkdir dir="${i2b2.src.dir}" />
-        <unzip src="${packages.dir}/i2b2core-src-1705.zip" dest="${i2b2.src.dir}">
+        <unzip src="${packages.dir}/i2b2core-src-${i2b2.version}.zip" dest="${i2b2.src.dir}">
             <patternset>
                 <include name="admin/**"/>
             </patternset>
         </unzip>
-        <unzip src="${packages.dir}/i2b2createdb-1705.zip" dest="${i2b2.src.dir}">
+        <unzip src="${packages.dir}/i2b2createdb-${i2b2.version}.zip" dest="${i2b2.src.dir}">
             <patternset>
                 <include name="**/NewInstall/**"/>
                 <exclude name="**/NewInstall/*.jar"/>
@@ -93,7 +94,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
                 <exclude name="**/NewInstall/Crcdata/scripts/expression_obs_demo_insert_data.sql"/>                   
             </patternset>
         </unzip>
-        <unzip src="${packages.dir}/i2b2webclient-1705.zip" dest="${i2b2.src.dir}"/>
+        <unzip src="${packages.dir}/i2b2webclient-${i2b2.version}.zip" dest="${i2b2.src.dir}"/>
 
         <copy file="${i2b2.src.dir}/webclient/i2b2_config_data.js" tofile="${i2b2.src.dir}/webclient/i2b2_config_data.js.orig"/>
         <replace file="${i2b2.src.dir}/webclient/i2b2_config_data.js">
