--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -31,15 +31,19 @@ dbuser.dir=db_user/
 
 # Created by AKTIN@2015
 db.type=postgresql
+db.type.name=PostgreSQL
 db.server=localhost:5432/
 db.name=i2b2
 db.project=demo
+db.project.name=Demo
 db.driver=org.postgresql.Driver
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.url=jdbc:postgresql://localhost:5432/
 db.username=postgres
 db.password=i2b2
+
 db.hive.id=i2b2demo
+
 db.hive.user=i2b2hive
 db.hive.pwd=i2b2hive
 db.pm.user=i2b2pm
@@ -51,15 +55,18 @@ db.meta.pwd=i2b2metadata
 db.crc.user=i2b2demodata
 db.crc.pwd=i2b2demodata
 
-db.DBURL=@DBURL@
 db.DBTYPE=@DBTYPE@
+db.DBTYPENAME=@DBTYPENAME@
 db.DBPROJECT=@I2B2PROJECT@
+db.DBPROJECTNAME=@I2B2PROJECTNAME@
 db.DBNAME=@DBNAME@
 db.SERVERURL=@SERVERURL@
 db.DBDRIVER=@DBDRIVER@
 db.DBDRIVERJAR=@DBDRIVERJAR@
+db.DBURL=@DBURL@
 db.DBUSER=@DBUSER@
 db.DBPWD=@DBPWD@
+
 db.HIVEUSER=@I2B2HIVEUSER@
 db.HIVEPWD=@I2B2HIVEPWD@
 db.PMUSER=@I2B2PMUSER@
