--- a/dwh/Vagrantfile
+++ b/dwh/Vagrantfile
@@ -6,8 +6,8 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 Vagrant.configure(2) do |config|
-  config.vm.box = "deb/wheezy-amd64" # "boxcutter/debian82" # "deb/jessie-amd64"
-  config.vm.provision :shell, path: "bootstrap.sh"
+  config.vm.box = "bento/debian-8.2" # "boxcutter/debian82" # "deb/jessie-amd64"
+#  config.vm.provision :shell, path: "bootstrap.sh"
   
   # Troubleshooting if startup fails:
   #config.vm.provider :virtualbox do |vb|
@@ -32,12 +32,12 @@ Vagrant.configure(2) do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.network "private_network", ip: "192.168.33.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  config.vm.network "public_network"#, ip: "134.106.37.201"
+#  config.vm.network "public_network"#, ip: "134.106.37.201"
   
 
   # Share an additional folder to the guest VM. The first argument is
